# coco-ml-toolbox

./: .gitignore  README.md  coco_main.py  main.py  main_cli.py  pyproject.toml  requirements.txt  st_app.py  utils.py
coco_tools/: coco.py  utils.py
coco_utils/: coco.py  coco_ops.py  utils.py
cocomltools/: cmd.py  coco_ops.py  logger.py  main_cli.py  utils.py
cocomltools/models/: base.py  coco.py
models/: coco.py  utils.py
pages/: home.py  stats.py  tools.py  utils.py
st_pages/: home.py  stats.py  tools.py
tests/mock/: coco_1.json  coco_2.json  coco_3.json  coco_4.json  coco_merge_input_1.json  coco_merge_input_2.json  coco_test_remove.json
tests/units/coco/: conftest.py  test_filter.py  test_merge.py  test_split.py
tests/units/coco_tools/: conftest.py  test_coco.py
