[tool.poetry]
name = "cocomltools"
version = "0.1.2"
description = ""
authors = ["Ghallabi <ghallabi.farouk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic="2.8.2"
pydantic_core="2.20.1"
scikit-learn = "^1.5.1"
pillow = "^10.4.0"


[tool.poetry.group.app.dependencies]
altair="5.2.0"
streamlit = "^1.37.0"
pandas = "^2.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
